# objmgr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  objmgr.c
.github/workflows/: build.yml  codeql.yml
include/objdefs/: objdefs.h  object01.h
include/objmgr/: config_consts.h  objapi.h  objects.h  objmgr.h  objtypes.h
include/objmgr/internal/: macros.h  objdefs.h
include/objmgr/objects/: object01.h
include/test/: hash.h  macros.h  prettyprint.h  test.h
include/test/objdefs/: obj_loop_5_then_remove_self.h  obj_noop.h  objdefs.h
src/: demo.c  objapi.c  objects.c  objmgr.c
src/objdefs/: objdefs.c  object01.c
src/objects/: object01.c
src/objmgr/: objapi.c  objmgr.c
src/test/: hash.c  main.c  tests.c  tests.h
src/test/objdefs/: obj_loop_5_then_remove_self.c  obj_noop.c  objdefs.c
